--- a/aula_python.ipynb
+++ b/aula_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCmmKFZPQfOQCO9nF0CJfu",
+      "authorship_tag": "ABX9TyPc4oFlz6vMR13y+dTBdxI9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,17 +55,88 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "kARjTrLtSZSu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kARjTrLtSZSu",
+        "outputId": "55c7c208-29f0-4629-f43c-7cc9ceffad2f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Os pontos totais do Rodrigo são 24\n"
+          ]
+        }
+      ],
       "source": [
         "livro_ficcao = 8\n",
         "livro_n_ficcao = 10\n",
         "livro_infantil = 6\n",
-        "pontos_rodrigo = livro_ficcao + livro_n_ficcao + livro_infantil"
+        "pontos_rodrigo = livro_ficcao + livro_n_ficcao + livro_infantil\n",
+        "print(f\"Os pontos totais do Rodrigo são {pontos_rodrigo}\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "livro_ficcao = 8\n",
+        "livro_n_ficcao = 10\n",
+        "livro_infantil = 6\n",
+        "pontos_rodrigo = livro_ficcao + livro_n_ficcao + livro_infantil\n",
+        "pontos_ana = 2 * livro_ficcao + 6 * livro_infantil\n",
+        "pontos_rodrigo_ana = pontos_rodrigo + pontos_ana\n",
+        "\n",
+        "print(f\"Os pontos totais do Rodrigo são {pontos_rodrigo}\")\n",
+        "print(f\"Os pontos totais de ana são {pontos_ana}\")\n",
+        "print(f\"Os pontos totais de rodrigo e ana são {pontos_rodrigo_ana}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A4lYaGCBXF7R",
+        "outputId": "5419561e-9088-4b42-a956-70bbb17b796b"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Os pontos totais do Rodrigo são 24\n",
+            "Os pontos totais de ana são 52\n",
+            "Os pontos totais de rodrigo e ana são 76\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**aula 3 tabuada** 1 ❌ 4"
+      ],
+      "metadata": {
+        "id": "vGGj9c8DawUR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def tabuada(numero):\n",
+        "    for contador in range(1, 11):  # Gera números de 1 a 10\n",
+        "        print(f\"{numero} x {contador} = {numero * contador}\")\n",
+        "numero = int(input(\"Digite um número para ver sua tabuada: \"))\n",
+        "tabuada(numero)"
+      ],
+      "metadata": {
+        "id": "K9AkCMc0d8eo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
